fix: venv 완전 제외 및 소스 경로 명시로 Maintainability 점수 개선
- sonar-project.properties에 venv 제외 패턴 추가
- Jenkinsfile에서 소스 경로를 명시적으로 api,app.py로 지정
- venv, __pycache__, tests 등 불필요한 파일 완전 제외
- Maintainability A 등급 달성을 위한 최적화

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,8 +11,8 @@ sonar.projectVersion=1.0
 # 분석할 소스코드 루트 경로
 sonar.sources=.
 
-# 제외할 파일 및 디렉토리 (HTML/JS/CSS, 캐시, 로그 등)
-sonar.exclusions=**/__pycache__/**,**/*.js,**/*.css,**/*.html,**/migrations/**
+# 제외할 파일 및 디렉토리 (HTML/JS/CSS, 캐시, 로그, venv 등)
+sonar.exclusions=**/__pycache__/**,**/*.js,**/*.css,**/*.html,**/migrations/**,venv/**,**/venv/**,**/node_modules/**,**/.git/**,**/coverage.xml
 
 ##########################################
 # SonarQube Server
