--- a/k3s-app.yaml
+++ b/k3s-app.yaml
@@ -22,7 +22,7 @@ spec:
           image: yorange50/conversation:latest   # ✅ Jenkins에서 push한 Docker 이미지
           imagePullPolicy: Always
           ports:
-            - containerPort: 8000              # Flask 내부 포트 (Gunicorn 바인드 포트와 동일)
+            - containerPort: 5000              # Flask 내부 포트
               name: http
           env:
             - name: OPENAI_API_KEY
@@ -40,7 +40,7 @@ spec:
           livenessProbe:
             httpGet:
               path: /health
-              port: 8000
+              port: 5000
             initialDelaySeconds: 30
             periodSeconds: 10
             timeoutSeconds: 5
@@ -48,7 +48,7 @@ spec:
           readinessProbe:
             httpGet:
               path: /health
-              port: 8000
+              port: 5000
             initialDelaySeconds: 10
             periodSeconds: 5
             timeoutSeconds: 3
@@ -70,8 +70,8 @@ spec:
     app: conversation
   type: NodePort
   ports:
-    - port: 8000           # 클러스터 내부에서 접근할 포트
-      targetPort: 8000     # 컨테이너의 포트 (Gunicorn --bind)
+    - port: 5000           # 클러스터 내부에서 접근할 포트
+      targetPort: 5000     # 컨테이너의 포트
       nodePort: 30080      # 외부 접근을 위한 NodePort
       protocol: TCP
       name: http
