fix: k3s-app.yaml 포트 5000 → 8000으로 변경
- containerPort: 8000
- livenessProbe port: 8000
- readinessProbe port: 8000
- Service port/targetPort: 8000
- kubectl rollout status 무한 대기 문제 해결

--- a/k3s-app.yaml
+++ b/k3s-app.yaml
@@ -1,6 +1,6 @@
 # ------------------------------------------
 # 1️⃣ Conversation Service Deployment
-# 포트 5000 통일 (Gunicorn 리슨 포트와 일치)
+# 포트 8000 통일 (Gunicorn 리슨 포트와 일치)
 # Health Check: /health 엔드포인트 사용
 # ------------------------------------------
 apiVersion: apps/v1
@@ -24,7 +24,7 @@ spec:
           image: yorange50/conversation:latest   # ✅ Jenkins에서 push한 Docker 이미지
           imagePullPolicy: Always
           ports:
-            - containerPort: 5000              # ✅ Gunicorn 리슨 포트와 일치
+            - containerPort: 8000              # ✅ Gunicorn 리슨 포트
               name: http
           env:
             - name: OPENAI_API_KEY
@@ -42,7 +42,7 @@ spec:
           livenessProbe:
             httpGet:
               path: /health
-              port: 5000                      # ✅ containerPort와 일치
+              port: 8000                      # ✅ containerPort와 일치
             initialDelaySeconds: 30
             periodSeconds: 10
             timeoutSeconds: 5
@@ -50,7 +50,7 @@ spec:
           readinessProbe:
             httpGet:
               path: /health
-              port: 5000                      # ✅ containerPort와 일치
+              port: 8000                      # ✅ containerPort와 일치
             initialDelaySeconds: 10
             periodSeconds: 5
             timeoutSeconds: 3
@@ -72,8 +72,8 @@ spec:
     app: conversation
   type: NodePort
   ports:
-    - port: 5000           # ✅ 클러스터 내부에서 접근할 포트
-      targetPort: 5000     # ✅ 컨테이너의 포트 (Gunicorn 리슨 포트와 일치)
+    - port: 8000           # ✅ 클러스터 내부에서 접근할 포트
+      targetPort: 8000     # ✅ 컨테이너의 포트 (Gunicorn 리슨 포트와 일치)
       nodePort: 30080      # 외부 접근을 위한 NodePort
       protocol: TCP
       name: http
